<resources>
    <string name="app_name">Music Player JD</string>
    <string name="shuffle_btn">Aleatorio</string>
    <string name="favorites_btn">Favoritos</string>
    <string name="playlist_btn">PLaylists</string>
    <string name="total_songs">Total songs</string>
    <string name="world_of_music">World of music</string>
    <string name="song_name">Song name</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading...</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="previous">previous</string>
    <string name="pause_btn">pause</string>
    <string name="next">next</string>
    <string name="add">add</string>
</resources>